--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,6 @@ Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-llaves/trees/master
 Package: canaima-llaves
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Llaves de los repositorios de Canaima GNU/Linux
+Description: Llaves de los repositorios de la Metadistribución Canaima
  Este paquete provee las llaves de los repositorios
  de Canaima GNU/Linux.
