--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: canaima-llaves
 Section: misc
 Priority: required
 Maintainer: Equipo de Desarrollo de Canaima GNU/Linux <desarrolladores@canaima.softwarelibre.gob.ve>
-Uploaders: Luis Alejandro Martínez Faneyth <martinez.faneyth@gmail.com>
+Uploaders: Randy Ortega <ortega571@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~)
 Standards-Version: 3.9.1
 Homepage: http://canaima.softwarelibre.gob.ve/
