Añadiendo llave pública del nuevo repositorio "paquetes.canaima.softwarelibre.gob.ve". Nuevo esquema de nombres para las llaves gpg: CANAIMA-[KEYID]-[STATUS].gpg 	KEYID: Identificador de la llave. 	STATUS: ACTIVE o DEPRECATED según sea el caso. Removiendo scripts de mantenedor innecesarios. Mejorando scripts para añadir o remover una llave. Añadiendo Pre-Depends a gnupg y apt.

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-llaves/trees/master
 Package: canaima-llaves
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Llaves de los repositorios de la Metadistribución Canaima
+Pre-Depends: gnupg, apt
+Description: Llaves de los repositorios de la Metadistribución Canaima GNU/Linux
  Este paquete provee las llaves de los repositorios
  de Canaima GNU/Linux.
