--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,9 @@
 Source: canaima-llaves
 Section: misc
 Priority: required
-Maintainer: Equipo de Desarrollo de Canaima GNU/Linux <desarrolladores@canaima.softwarelibre.gob.ve>
-Uploaders: Sasha Solano <sashasolano@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~)
-Standards-Version: 3.9.1
+Maintainer: Sasha Veronica Solano Grosjean <sashasolano@gmail.com>
+Build-Depends: debhelper (>= 9)
+Standards-Version: 3.9.3
 Homepage: http://canaima.softwarelibre.gob.ve/
 Vcs-Git: git://gitorious.org/canaima-gnu-linux/canaima-llaves.git
 Vcs-Browser: http://gitorious.org/canaima-gnu-linux/canaima-llaves/trees/master
